--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "dependencies": {
     "jest": "^29.1.2",
-    "moment": "^2.29.4",
-    "react-router-dom": "^6.4.1"
+    "moment": "^2.29.4"
   }
 }
