--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "Aplicación de notas con parte backend y parte frontend en monorepo",
   "main": "index.js",
   "scripts": {
-    "dev:api": "npm run dev -w api",
+    "dev:api": "npm run build -w app && npm run dev -w api",
     "dev:app": "npm run dev -w app"
   },
   "repository": {
