--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "start": "node ./index.js",
+    "start": "npm run prettier && npm run lint && node ./index.js",
     "test": "jest --coverage",
     "lint": "eslint ./",
     "prettier": "prettier --write ./",
@@ -17,7 +17,6 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
     "express": "4.18.1",
     "nodemon": "2.0.19",
     "sqlite3": "^5.1.1",
