--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dev:api": "npm run dev -w api",
     "dev:app": "npm run dev -w app",
     "dev": "npm run build -w app && npm run dev -w api",
-    "start": "npm run build -w app && npm run start -w api",
-    "lint": "eslint ./api ./app --ext js,ts,tsx"
+    "start": "npm run prettier && npm run lint && npm run build -w app && npm run start -w api",
+    "lint": "eslint ./api ./app --ext js,ts,tsx",
+    "prettier": "prettier --write ./api ./app"
   },
   "repository": {
     "type": "git",
